# dnora

./: .gitignore  DNORA.py  README.md  Sulafjorden250_Boundaries.txt  Sulafjorden250_bathy.txt  Sulafjorden250_info.txt  Sulafjorden250_mapsta.txt  __init__.py  aux.py  bnd_mod.py  environment.yml  func.py  inp.py  obj.py  prepare_forecast.py  prepare_hindcast.py  pyproject.toml  run.py  run_DNORA.py  setup.py  spec.py  test_DNORA.py  test_bnd.py  test_grd.py  test_inp.py  test_param.py  test_wnd.py  version.py  wnd_mod.py
.github/: tests.yml
bnd/: __init__.py  bnd.py  modify.py  pick.py  process.py  read.py  write.py
dnora/: KartverketNo50m.py  __init__.py  aux.py  aux_funcs.py  cacher.py  converters.py  data_sources.py  defaults.py  defaults.yml  dnora_object_type.py  dnora_types.py  dnplot.py  file_module.py  func.py  inp.py  msg.py  read_metno_obs.py  readers.py  run.py  spec.py  spectral_conventions.py  spectral_grid.py  version.py  wave_parameters.py  wave_series.py
dnora2/: aux.py  bnd.py  grd.py  inp.py  msg.py  param.py  spec.py  wnd.py
docs/: 1_welcome.rst  2_install.rst  3_rest.rst  index.rst
examples/: WW3_grid_01.2dm  dnora2_constant_spectrum.py  dnora2_constant_wind copy.py  dnora2_ec_wind.py  dnora2_metno_wind copy.py  example_WAM4.py  example_cache_forcing_and_boundary.py  example_era5_swan.py  example_mdl.py  example_mdl_hos_ocean.py  example_mdl_reef3d.py  example_mdl_swan.py  example_mdl_swan_ekofisk.py  example_mdl_swan_ice.py  example_mdl_swan_nora3.py  example_mdl_swan_nora3_intern.py  example_mdl_swan_wam4.py  example_mdl_swash.py  example_mdl_swash_Vietnam.py  example_mdl_swash_nora3.py  example_mdl_ww3.py  example_mdl_ww3_nora3.py  example_one_nora3_point.py  example_one_wam4_point.py  example_plot_grid.py  example_trg.py  example_triangular_grid.py  example_ww3_nora3.py  examples_read_metno_obs.py  nml_writer.py  nml_writer_unst.py  prepare_forecast.py  prepare_hindcast.py  prepare_hindcast_swash.py  structured_grid.py  yank_points.py
grd/: __init__.py  grd.py  grd_mod.py  mesh.py  modify.py  msh.py  process.py  read.py  write.py
test/: get_era5_spectra.py
tests/: pytest.ini  test_aux.py  test_bnd_process.py  test_boundary.py  test_boundary_init.py  test_boundary_points.py  test_cache_read_write.py  test_constant_data_reader.py  test_create_time_stamps_forecast.py  test_current.py  test_datavar_decoding.py  test_dummy_import_export.py  test_exporters.py  test_exporters_dry.py  test_file_module.py  test_forcing.py  test_forcing_init.py  test_grid_boundary.py  test_grid_import_and_mesh.py  test_grid_init.py  test_grid_process.py  test_grid_set_spacing.py  test_iceforcing.py  test_internal_spectra_readers.py  test_modelrun_dry.py  test_modelrun_init_time.py  test_oceancurrent.py  test_point_pick_logic.py  test_point_pickers.py  test_read_utils.py  test_remote_current_readers.py  test_remote_ice_readers.py  test_remote_spectra_readers.py  test_remote_waterlevel_readers.py  test_remote_waveseries_readers.py  test_remote_wind_readers.py  test_set_get_item.py  test_spectra.py  test_spectra_init.py  test_spectra_readers.py  (+21 more)
wnd/: read.py  (+2 more)
(+417 files in other folders)
