[build-system]
requires = ["setuptools>=42", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "dnora"
version = "2.0.3"
description = "dnora - a software for dynamical downscaling of wave products"
authors = [ { name = "Konstantinos Christakos", email = "konstantinosc@met.no"}, { name = "Jan-Victor Björkqvist", email = "janvb@met.no" } ]
urls = {homepage = "https://github.com/MET-OM/dnora", download = "https://github.com/MET-OM/dnora"}
requires-python = ">=3.9, <3.11"
dependencies = [
    "matplotlib>=3.1",
    "numpy>=1.17",
    "scipy>=1.7",
    "pandas",
    "xarray>=0.20.1",
    "netCDF4",
    "meshio",
    "geo-skeletons=0.20.*",
    "python-dotenv",
    "progressbar",
    "pyarrow",
    "dnplot"
]
readme = "README.md"
license = {file = "LICENSE"}

[project.optional-dependencies]
test = ["pytest>=7.0"]

[tool.setuptools]
license-files = ["LICENSE"]

[tool.setuptools_scm]
write_to = "dnora/_version.py"
